--- a/src/common/MetaPreview/ActionButton/styles.less
+++ b/src/common/MetaPreview/ActionButton/styles.less
@@ -14,7 +14,7 @@
 
     .icon-container {
         flex: 0 0 50%;
-        align-self: stretch;
+        display: flex;
         padding-top: 15%;
 
         &:only-child {
@@ -23,8 +23,7 @@
 
         .icon {
             display: block;
-            width: 100%;
-            height: 100%;
+            flex: 1 0 50%;
             fill: @color-surface-light5-90;
         }
     }
