fix(ModalDialog): flex auto on modal-dialog-content

--- a/src/common/ModalDialog/styles.less
+++ b/src/common/ModalDialog/styles.less
@@ -52,7 +52,7 @@
         }
 
         .modal-dialog-content {
-            flex: 1;
+            flex: auto;
             align-self: stretch;
             margin: 1.5rem 1rem 0;
             padding: 0 1rem;
